# MyMandelbrot

./: CMakeLists.txt  README.md  main.cpp  mandelbrot.cpp  mandelbrot.h
